--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.3",
+    "react-icons": "^5.3.0",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.27.0",
     "react-router-hash-link": "^2.4.3"
