--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.17",
     "i18next": "^23.16.0",
     "i18next-browser-languagedetector": "^8.0.0",
