--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.3.1",
     "emailjs-com": "^3.2.0",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.15.0",
     "i18next": "^23.16.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
+    "react-ga": "^3.3.1",
     "react-i18next": "^15.0.3",
     "react-icons": "^5.3.0",
     "react-parallax": "^3.5.1",
