--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
     "react-ga": "^3.3.1",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.0.3",
     "react-icons": "^5.3.0",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.27.0",
     "react-router-hash-link": "^2.4.3",
-    "sitemap": "^8.0.0"
+    "sitemap": "^8.0.0",
+    "web-vitals": "^3.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
