--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,13 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "redirects": [
+      {
+        "source": "/",
+        "destination": "/de",
+        "type": 301
+      }
+    ],
     "rewrites": [
       {
         "source": "**",
